# Station_CourseWork

./: CMakeLists.txt  README.md  add_create_station.cpp  add_create_station.h  add_create_station.ui  add_func.cpp  add_func.h  add_train.cpp  add_train.h  add_train.ui  classes.h  errorwindow.cpp  errorwindow.h  errorwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource_files.qrc  station.cpp  station.h  train.cpp  train.h
Docs/: icons.psd
Stations/: ALLS.txt  AllStations.txt  Ternopil.txt
Stations/Error Stations/: ALLS_error_version.txt  ALLS_error_version_2.txt  ALLS_error_version_3.txt
Stations/New Stations/: Ivano-Fr.txt  Lviv.txt  Sumy.txt
Stations/new_station/: AllStations.txt
